# fast-api-restaurant-management

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: .env  main.py  pyproject.toml
app/config/: database.py  keycloak.py  setting.py
app/controller/: auth.py
app/models/: auth.py  init.py  user.py
app/routers/: auth_router.py
app/schemas/: user.py
app/service/: auth.py
