[tool.poetry]
package-mode = false
name = "fast-api-restaurant-management"
version = "0.1.0"
description = ""
authors = ["chanbunlek <chanbunlek9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
python-keycloak = "^4.7.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
